--- a/contagem.html
+++ b/contagem.html
@@ -9,13 +9,14 @@
     <meta name="keywords" content="Hora online, horário de brasília, Calculadora online, Contagem de dias entre datas, Calcular Porcentagem online, Calculadora imc, Indice de massa corporal.">
     <link rel="shortcut icon" href="assets/img/gear.png" type="image/x-icon">
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M6MEZD2SEF"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9XLPD8Z0ZT"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-M6MEZD2SEF');
+    gtag('config', 'G-9XLPD8Z0ZT');
     </script>
 
     <title>TimeOnline/Contagem</title>
