--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <meta name="description" content="Horário atual. Horário de brasília. TimeOnline.">
     <meta name="keywords" content="Hora online, horário de brasília, Calculadora online, Contagem de dias entre datas, Calcular Porcentagem online, Calculadora imc, Indice de massa corporal.">
     <link rel="shortcut icon" href="assets/img/gear.png" type="image/x-icon">
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M6MEZD2SEF"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9XLPD8Z0ZT"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-M6MEZD2SEF');
+    gtag('config', 'G-9XLPD8Z0ZT');
     </script>
+
     <title>TimeOnline/Home</title>
     <!--FONT AWESOME-->
     <script src="https://kit.fontawesome.com/7a98acb87b.js" crossorigin="anonymous"></script>
