--- a/imc.html
+++ b/imc.html
@@ -9,7 +9,10 @@
     <meta name="keywords" content="Hora online, horário de brasília, Calculadora online, Contagem de dias entre datas, Calcular Porcentagem online, Calculadora imc, Indice de massa corporal.">
     <link rel="shortcut icon" href="assets/img/gear.png" type="image/x-icon">
 
-        <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8819310187808298"
+     crossorigin="anonymous"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9XLPD8Z0ZT"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
