--- a/calculater.html
+++ b/calculater.html
@@ -47,7 +47,7 @@
                 <li><a href="#"><i class="fas fa-arrow-circle-right"></i> Calculadora</a></li>
                 <li><a href="contagem.html"><i class="fas fa-arrow-circle-right"></i> Contagem Regressiva</a></li>
                 <li><a href="imc.html"><i class="fas fa-arrow-circle-right"></i> Indice de massa corporal</a></li>
-                <li><a href="#"><i class="fas fa-arrow-circle-right"></i> Porcentagem</a></li>
+                <li><a href="porcentagem.html"><i class="fas fa-arrow-circle-right"></i> Porcentagem</a></li>
             </ul>
         </nav>
     </header>
@@ -115,7 +115,7 @@
                     <li><a href="calculater.html">Calculadora</a></li>
                     <li><a href="contagem.html">Contagem</a></li>
                     <li><a href="imc.html">Indice de Massa corporal</a></li>
-                    <li><a href="#">Porcentagem</a></li>
+                    <li><a href="porcentagem.html">Porcentagem</a></li>
                 </ul>
             </nav>
         </div>
