--- a/calculater.html
+++ b/calculater.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Calculadora online. Calcule online, somar, multiplicar, dividir e Subtrair online">
-    <meta name="keywords" content="Hora online, horário de brasília, Calculadora online, Contagem de dias entre datas, Calcular Porcentagem online, Calculadora imc, Indice de massa corporal.">
+    <meta name="description" content="Calculadora online. Calcule online, somar, multiplicar, dividir e Subtrair online, app calculadora">
+    <meta name="keywords" content="Calculadora online, calculater, Calcule soma, divisao, multiplicação e subtração, timeonline.vercel.app">
     <link rel="shortcut icon" href="assets/img/gear.png" type="image/x-icon">
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8819310187808298"
@@ -86,6 +86,15 @@
             </div>
         </form>
 
+        <div class="tutorial--hora">
+            <h3>TimeOnline, Calculadora Online</h3>
+            <hr>
+    
+            <p>
+                Calculadora online, Calcule online, defina o primeiro número e depois o segundo voçê pode opitar por somar, subtrair, dividir e multiplicar o resultado sairá acima.  Caso queira instruções de como usar o site TimeOnline Role o site para cima, E vá até o titulo Como usar o site TimeOnline.
+            </p>
+        </div>
+
         <div style="padding: 20px;">
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8819310187808298"
          crossorigin="anonymous"></script>
@@ -94,7 +103,6 @@
             style="display:block;"
             data-ad-client="ca-pub-8819310187808298"
             data-ad-slot="3314705734"
-            data-adtest="on"
             data-ad-format="auto"
             data-full-width-responsive="true"></ins>
             <script>
@@ -128,7 +136,6 @@
             style="display:block;"
             data-ad-client="ca-pub-8819310187808298"
             data-ad-slot="3314705734"
-            data-adtest="on"
             data-ad-format="auto"
             data-full-width-responsive="true"></ins>
             <script>
