--- a/contagem.html
+++ b/contagem.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Porcentagem online, calcular Porcentagem, Porcentagem, Calculadora Porcentagem.">
-    <meta name="keywords" content="Hora online, horário de brasília, Calculadora online, Contagem de dias entre datas, Calcular Porcentagem online, Calculadora imc, Indice de massa corporal.">
+    <meta name="description" content="Calculadora para fazer contagem de dias entre duas datas. Descubra quantos dias faltam para qualquer data.">
+    <meta name="keywords" content="Calculadora para fazer contagem de dias entre duas datas. Descubra quantos dias faltam para qualquer data, timeonline.vercel.app">
     <link rel="shortcut icon" href="assets/img/gear.png" type="image/x-icon">
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8819310187808298"
@@ -79,6 +79,15 @@
                     </div>
                 </div>
         </form>
+
+        <div class="tutorial--hora">
+            <h3>TimeOnline, Contagem de dias entre Datas</h3>
+            <hr>
+    
+            <p>
+                Contagem de dias entre Datas, calcule uma data, primeiro preencha a primeira data depois a segunda data e clica em calcular o resultado mostrará acima. Caso queira instruções de como usar o site TimeOnline Role o site para cima, E vá até o titulo Como usar o site TimeOnline.
+            </p>
+        </div>
         
         <div style="padding: 20px;">
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8819310187808298"
@@ -88,7 +97,6 @@
             style="display:block;"
             data-ad-client="ca-pub-8819310187808298"
             data-ad-slot="3314705734"
-            data-adtest="on"
             data-ad-format="auto"
             data-full-width-responsive="true"></ins>
             <script>
@@ -122,7 +130,6 @@
             style="display:block;"
             data-ad-client="ca-pub-8819310187808298"
             data-ad-slot="3314705734"
-            data-adtest="on"
             data-ad-format="auto"
             data-full-width-responsive="true"></ins>
             <script>
