--- a/imc.html
+++ b/imc.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="imc online, calcule seu imc. Indice de massa corporal.">
-    <meta name="keywords" content="Hora online, horário de brasília, Calculadora online, Contagem de dias entre datas, Calcular Porcentagem online, Calculadora imc, Indice de massa corporal.">
+    <meta name="description" content="imc online, calcule seu imc na calculadora online e veja o resultado,">
+    <meta name="keywords" content="Indice de massa corporal, calculadora imc online, app de medir imc, Imc, como saber meu imc, timeonline.vercel.app">
     <link rel="shortcut icon" href="assets/img/gear.png" type="image/x-icon">
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8819310187808298"
@@ -82,6 +82,16 @@
                 </div>
             </div>
         </form>
+
+        <div class="tutorial--hora">
+            <h3>TimeOnline, Calculadora Imc</h3>
+            <hr>
+    
+            <p>
+                Indice de massa corporal, calcule seu imc, primeiro preencha sua Altura depois seu peso, lembre-se das virgulas ou pontos para definir os metros e peso, e clica em calcular o resultado mostrará acima. Caso queira instruções de como usar o site TimeOnline Role o site para cima, E vá até o titulo Como usar o site TimeOnline.
+            </p>
+        </div>
+
         <div style="padding: 20px;">
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8819310187808298"
          crossorigin="anonymous"></script>
@@ -90,7 +100,6 @@
             style="display:block;"
             data-ad-client="ca-pub-8819310187808298"
             data-ad-slot="3314705734"
-            data-adtest="on"
             data-ad-format="auto"
             data-full-width-responsive="true"></ins>
             <script>
@@ -122,7 +131,6 @@
             style="display:block;"
             data-ad-client="ca-pub-8819310187808298"
             data-ad-slot="3314705734"
-            data-adtest="on"
             data-ad-format="auto"
             data-full-width-responsive="true"></ins>
             <script>
