--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Horário atual. Horário de brasília. TimeOnline.">
-    <meta name="keywords" content="Hora online, horário de brasília, Calculadora online, Contagem de dias entre datas, Calcular Porcentagem online, Calculadora imc, Indice de massa corporal.">
+    <meta name="description" content="Veja o Horário atual, Horário de brasília, que horas são">
+    <meta name="keywords" content="Hora online, horário de brasília, Hora atual, Que horas são, Horas, Minutos, app de horas, timeonline.vercel.app">
     <link rel="shortcut icon" href="assets/img/gear.png" type="image/x-icon">
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8819310187808298"
@@ -65,6 +65,17 @@
         <div class="time__divHours">
             <span id="horass"></span>
         </div>
+
+    </div>
+    
+    <div class="tutorial--hora">
+        <h3>TimeOnline, Horário de Brasília</h3>
+        <hr>
+
+        <p>
+            Horário atual, Horário de Brasília, Veja a hora atual acima não Precisa definir nada, Caso queira instruções de como usar o site TimeOnline Role o site para cima, E vá até o titulo Como usar o site TimeOnline.
+        </p>
+    </div>
 
     <div style="padding: 20px;">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8819310187808298"
