--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     </script>
 
     <title>TimeOnline/Home</title>
+    <meta name="google-site-verification" content="i-AHpoyWj6KsNy8w9GbGmJxBFvbyiJHq2-elJCmzANY" />
+
     <!--FONT AWESOME-->
     <script src="https://kit.fontawesome.com/7a98acb87b.js" crossorigin="anonymous"></script>
     <!--STYLESHEET-->
