--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     gtag('config', 'G-9XLPD8Z0ZT');
     </script>
 
-    <title>TimeOnline/Home</title>
+    <title>TimeOnline</title>
     <meta name="google-site-verification" content="i-AHpoyWj6KsNy8w9GbGmJxBFvbyiJHq2-elJCmzANY" />
 
     <!--FONT AWESOME-->
