--- a/porcentagem.html
+++ b/porcentagem.html
@@ -22,7 +22,7 @@
     gtag('config', 'G-9XLPD8Z0ZT');
     </script>
 
-    <title>TimeOnline/Porcentagem</title>
+    <title>TimeOnline - Calculadora Porcentagem</title>
     <!--FONT AWESOME-->
     <script src="https://kit.fontawesome.com/7a98acb87b.js" crossorigin="anonymous"></script>
     <!--STYLESHEET-->
