--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Veja o Horário atual, Horário de brasília, que horas são">
     <meta name="keywords" content="Hora online, horário de brasília, Hora atual, Que horas são, Horas, Minutos, app de horas, timeonline.vercel.app">
+    <meta name="robots" content="index,nofollow">
     <link rel="shortcut icon" href="assets/img/gear.png" type="image/x-icon">
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8819310187808298"
