--- a/calculater.html
+++ b/calculater.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Calculadora online. Calcule online, somar, multiplicar, dividir e Subtrair online, app calculadora">
     <meta name="keywords" content="Calculadora online, calculater, Calcule soma, divisao, multiplicação e subtração, timeonline.vercel.app">
+    <meta name="robots" content="index,nofollow">
     <link rel="shortcut icon" href="assets/img/gear.png" type="image/x-icon">
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8819310187808298"
