--- a/imc.html
+++ b/imc.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="imc online, calcule seu imc na calculadora online e veja o resultado,">
     <meta name="keywords" content="Indice de massa corporal, calculadora imc online, app de medir imc, Imc, como saber meu imc, timeonline.vercel.app">
+    <meta name="robots" content="index,nofollow">
     <link rel="shortcut icon" href="assets/img/gear.png" type="image/x-icon">
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8819310187808298"
