--- a/porcentagem.html
+++ b/porcentagem.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Percentual Calculadora, Porcentagem online, calcular Porcentagem, Porcentagem, Calculadora Porcentagem.">
     <meta name="keywords" content="Percentual online, Porcentagem, porcento, Quantos porcento de">
+    <meta name="robots" content="index,nofollow">
     <link rel="shortcut icon" href="assets/img/gear.png" type="image/x-icon">
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8819310187808298"
