--- a/contagem.html
+++ b/contagem.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Calculadora para fazer contagem de dias entre duas datas. Descubra quantos dias faltam para qualquer data.">
     <meta name="keywords" content="Calculadora para fazer contagem de dias entre duas datas. Descubra quantos dias faltam para qualquer data, timeonline.vercel.app">
+    <meta name="robots" content="index,nofollow">
     <link rel="shortcut icon" href="assets/img/gear.png" type="image/x-icon">
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8819310187808298"
